Body + titulo adicionado.

--- a/index.html
+++ b/index.html
@@ -9,4 +9,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Exemplo HTML</title>
 	</head>
+	
+	<body>
+		<h1>Olá Mundo!</h1>
+	</body>
+	
 </html>
