--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
-<!-- Este é um comentário em HTML -->
-<!doctype html> <!-- Isto é uma Instrução ao Browser que este documento é um HTML5 -->
-<!-- Chamamos isso de DTD = Document Type Definition -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Exemplo HTML</title>
+</head>
+<body>
 
-<html lang="pt-br">
-	
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Exemplo HTML</title>
-	</head>
-	
-	<body>
-		<h1>Olá Mundo!</h1>
-	</body>
-	
+	<h1>Olá Mundo!</h1>
+	<h2>Continuando</h2>
+
+</body>
 </html>
