--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Exemplo HTML</title>
 </head>
+
 <body>
-
-	<h1>Olá Mundo!</h1>
-	<h2>Continuando</h2>
-
+	
+	<div>
+		<h1>PÁGINA INICIAL</h1>
+		<div>
+			<p>
+				Lorem, <span style="color:#ff0000;">ipsum</span> dolor sit amet consectetur adipisicing elit. Modi aspernatur cumque iure ut quo dignissimos mollitia deleniti doloribus, ipsam repudiandae ex similique fuga, quibusdam laudantium soluta, quam delectus cupiditate aliquam.
+			</p>
+		</div>
+	</div>
+	
 </body>
+
 </html>
+	<!-- <h1>Olá Mundo!</h1>
+	<h2>Continuando</h2>
+	<h3>Exercitando os títulos</h3> -->
