--- a/index.html
+++ b/index.html
@@ -10,12 +10,39 @@
 <body>
 	
 	<div>
-		<h1>PÁGINA INICIAL</h1>
+
+		<header>
+			<h1>PÁGINA INICIAL</h1>
+			<nav>
+				<ul>
+					<li>Java</li>
+					<li>Javascript</li>
+					<li>Python</li>
+					<li>C#</li>
+				</ul>
+
+			</nav>
+		</header>
+
 		<div>
-			<p>
-				Lorem, <span style="color:#ff0000;">ipsum</span> dolor sit amet consectetur adipisicing elit. Modi aspernatur cumque iure ut quo dignissimos mollitia deleniti doloribus, ipsam repudiandae ex similique fuga, quibusdam laudantium soluta, quam delectus cupiditate aliquam.
-			</p>
+			<section>
+				<p>
+					Lorem, <span style="color:#ff0000;">ipsum</span> dolor sit amet consectetur adipisicing elit. Modi aspernatur cumque iure ut quo dignissimos mollitia deleniti doloribus, ipsam repudiandae ex similique fuga, quibusdam laudantium soluta, quam delectus cupiditate aliquam.
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit laborum consequatur esse provident maxime reprehenderit quis iure labore iste cum ex voluptatibus perferendis quas, possimus non ipsa eius illo et!
+				</p>
+			</section>
 		</div>
+
+		<footer>
+			<div>
+				<small>
+					<p>Copyright&copy - 2023</p>
+				</small>
+			</div>
+		</footer>
+
 	</div>
 	
 </body>
